# tensor-randomized-kaczmarz-algorithms

./: LICENSE  MANIFEST.in  Makefile  README.md  TESTING.md  example.ipynb  pyproject.toml  pytest.ini  requirements.text  setup.py  setup_tests.sh
.github/workflows/: tests.yml
tests/: QUICK_START.md  README.md  __init__.py  test_utils.py
trk_algorithms/: __init__.py  config.py  draft.py  methods.py  utils.py
