[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trk-algorithms"
version = "0.1.0"
description = "A Python package for Tensor randomized Kaczmarz algorithms"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Jeremie Mabiala", email = "jnlandu@gmail.com"}
]
dependencies = [
    # tensor_toolbox is not on PyPI; install from Git commit (PEP 508 URL)
    "tensor_toolbox @ git+https://github.com/jnlandu/tensor-tensor-toolbox-in-python.git@ded1e12e81735b853b488ac4062eb99f3b1ab08c",
]

keywords = [
    "tensor",
    "Kaczmarz",
    "t-product",
    "numerical algorithms",
    "randomized Kaczmarz",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://github.com/jnlandu/tensor-randomized-kaczmarz-algorithms"
Repository = "https://github.com/jnlandu/tensor-randomized-kaczmarz-algorithms"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "matplotlib>=3.5.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "matplotlib>=3.5.0",
    "pandas",
    "pylint",
    "autopep8",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["trk_algorithms*"]

[tool.setuptools.exclude-package-data]
"*" = ["__pycache__", "*.pyc"]
